changed table header and footer to divs in order to allow both sides of header and footers to align correctly.

--- a/style.css
+++ b/style.css
@@ -1,12 +1,60 @@
 
-#header{
-    /* float:left; */
-    width: 100%;
-    height: 100%
+#headerLeft{
+    float:left;
+    width:50%
 }
+
+#headerRight{
+    float:right;
+    
+}
+
+
 
 
 #mainSection{
     text-align: center;
 }
 
+
+#footerLeft{
+    position:fixed;
+    left:0;
+    bottom:0;
+    width:100%;
+    text-align: left;
+}
+
+#footerCenter{
+    position:fixed;
+    left:0;
+    bottom:0;
+    width:100%;
+    text-align: center;
+}
+
+#footerRight{
+    position:fixed;
+    left:0;
+    bottom:0;
+    width:100%;
+    text-align: right;
+}
+
+form{
+    border-radius:30px
+}
+
+td{
+    position: relative;
+}
+td.left{
+    position: absolute; 
+    text-align: left; 
+    left: 0;
+}
+td.right{
+    position: absolute; 
+    text-align: right; 
+    right: 0;
+}
